package edu.tudai.arq.entity;

public enum Genero {
    MALE,POLYGENDER,AGENDER,FEMALE,NON_BINARY,GENDERFLUID,BIGENDER

}
